# ttsbench

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/phase-status/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
docs/: README.md  metrics_explained.md  ttsbench_build_plan.md  ttsbench_implementation_plan.md  ttsbench_prd_v1.md
tests/: test_adapters.py  test_cli.py  test_dataset.py  test_kokoro.py  test_latency.py  test_markdown_report.py  test_piper.py  test_pronunciation.py  test_runtime.py  test_schemas.py
ttsbench/: __init__.py  cli.py  config.py  runtime.py  schemas.py  utils.py
ttsbench/adapters/: __init__.py  base.py  cartesia.py  coqui_xtts.py  elevenlabs.py  kokoro.py  openai.py  piper.py
ttsbench/benchmarks/: __init__.py  cost.py  latency.py  pronunciation.py
ttsbench/datasets/: __init__.py  healthcare.yaml
ttsbench/evaluators/: __init__.py  asr_roundtrip.py  expected_form_match.py  phoneme_match.py  phoneme_recognizer.py
ttsbench/reports/: __init__.py  csv_report.py  markdown_report.py  summary.py
