[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttsbench"
version = "0.1.0"
description = "Local-first benchmarking toolkit for text-to-speech latency, pronunciation, and runtime practicality."
readme = "docs/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
piper = [
    "piper-tts>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
ttsbench = "ttsbench.cli:app"

[tool.setuptools.packages.find]
include = ["ttsbench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
