[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttsbench"
version = "0.1.0"
description = "Local-first benchmarking toolkit for text-to-speech latency, pronunciation, and runtime practicality."
readme = "docs/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
piper = [
    "piper-tts>=1.4",
]
asr = [
    "faster-whisper>=1.1",
]
phoneme = [
    "torch>=2.2",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
ttsbench = "ttsbench.cli:app"

[tool.setuptools.packages.find]
include = ["ttsbench*"]

[tool.setuptools.package-data]
ttsbench = ["datasets/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
